# multi-cloud-finops-mcp-server

./: .env.sample  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  run_tests.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
clouds/aws/: client.py  tools.py  utils.py
clouds/azure/: client.py  tools.py  utils.py
clouds/gcp/: client.py  tools.py  utils.py
mcp/server/: fastmcp.py
tests/: test_aws_tools.py  test_azure_tools.py  test_cli.py  test_gcp_tools.py
