[tool.poetry]
name = "multi-cloud-mcp"
version = "0.1.0"
description = "Multi-cloud FinOps MCP server for AWS, GCP, and Azure cost summaries."
authors = ["shujat <muhammad.hussain@zazmic.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
boto3 = "^1.38.34"
google-cloud-billing = "^1.16.2"
azure-identity = "^1.23.0"
azure-mgmt-costmanagement = "^4.0.1"
mcp = "^1.9.3"
typer = "^0.16.0"
langchain = "^0.3.25"
langgraph = "^0.4.8"
langchain-google-genai = "^2.1.5"
nest-asyncio = "^1.6.0"
google-api-python-client = "^2.172.0"
azure-mgmt-subscription = "^3.1.1"
azure-mgmt-resource = "^23.4.0"
azure-mgmt-compute = "^34.1.0"
azure-mgmt-consumption = "^10.0.0"
google-cloud-bigquery = "^3.34.0"
google-cloud-resource-manager = "^1.14.2"
google-cloud-container = "^2.57.0"
google-cloud-logging = "^3.12.1"
prompt-toolkit = "^3.0.51"
google-cloud-storage = "^3.1.0"
google-cloud-monitoring = "^2.27.2"
google-cloud-compute = "^1.31.0"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.12.0"
mypy = "^1.16.1"
azure-mgmt-monitor = "^6.0.2"
azure-mgmt-network = "^29.0.0"
azure-mgmt-storage = "^23.0.0"
azure-mgmt-authorization = "^4.0.0"
azure-mgmt-containerservice = "^37.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
